--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "node-forge": "^0.7.5"
+    "node-forge": ">=0.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
